test/errors/fuzzy_match_type.lq
# Test: Fuzzy matching in type errors
# This file intentionally has a typo to test "did you mean?" suggestions
# Expected error: "Variable not in scope: Ar::addt"
# Expected suggestion: "Did you mean: Ar::add"

import prelude as P
import arithmetic as Ar

module test::errors::fuzzy_match_type contains
  # Deliberately misspell add as addt
  define transparent test-typo as
    function x Natural y Natural returns Natural value
      Ar::addt x y
    end

  define transparent main as compute
    return (test-typo 2 3)
  end
end
